# windows-rs-learn

./: Cargo.toml  windows-rs-learn.workspace
.codelite/: windows-rs-learn.session  windows-rs-learn.workspace
projects/injection/dll-to-inject/: Cargo.toml
projects/injection/dll-to-inject/src/: lib.rs  logger.rs  main_work.rs  run.rs  utils.rs
projects/injection/dll-to-inject/src/run/: dis_log.rs  heaps.rs  loaded_modules.rs
projects/injection/dll-to-inject/src/utils/: close_frame_window.rs  get_heap_blocks.rs  get_loaded_module.rs
projects/injection/injector/: Cargo.toml
projects/injection/injector/src/: debug_priv.rs  error.rs  injection.rs  lib.rs  main.rs  process.rs
projects/start/: Cargo.toml
projects/start/src/: main.rs
src/: main.rs
