[workspace.package]
edition = "2024"
authors = ["tonymushah tonymushahdev06@yahoo.com"]

[workspace]
members = ["./projects/start", "projects/injection/dll-to-inject", "projects/injection/injector"]
resolver = "3"

[workspace.dependencies]
windows = { version = "0.61" }
windows-core = "0.61"
anyhow = "1"
thiserror = "2"
windows-link = "0.1"
eframe = "0.31"
fern = "0.7"