[package]
name = "windows-rs-learn"
version = "0.1.0"
edition.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading"
] }
windows-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true