[package]
name = "dll-to-inject"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Threading"
] }
windows-core.workspace = true
anyhow.workspace = true
eframe.workspace = true
fern.workspace = true