[package]
name = "dll-to-inject"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp"
] }
windows-core.workspace = true
anyhow.workspace = true
eframe.workspace = true
fern.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
log.workspace = true
humantime.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winit.workspace = true
