[package]
name = "injector"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_LibraryLoader"
] }
windows-core.workspace = true
